Heading towords deployment

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    <!--=============== CSS ===============-->
    <link rel="stylesheet" href="assets/css/styles.css">
 
-   <title>Kritika Home Food - Fresh, Soft Chapatis</title>
+   <title>Avni Home Food - Fresh, Soft Chapatis</title>
 </head>
 
 <body>
@@ -29,7 +29,7 @@
       <nav class="nav container">
          <a href="#" class="nav__logo">
             <img src="assets/img/logo.png" alt="Kritika Home Food Logo" style="width: 35px;">
-            Kritika Home Food
+            Avni Home Food
          </a>
 
          <div class="nav__menu" id="nav-menu">
@@ -99,14 +99,14 @@
                <h4>Our mission</h4>
                <br>
                <p class="about__description">
-                  At Kritika Home Food, we ensure no one misses the warmth of home-cooked food. Our mission is to provide fresh, healthy chapatis that bring comfort and nourishment to every meal, wherever you are.
+                  At Avni Home Food, we ensure no one misses the warmth of home-cooked food. Our mission is to provide fresh, healthy chapatis that bring comfort and nourishment to every meal, wherever you are.
                </p>
                <h4 class="about__h4">Our value</h4>
                <p class="about__description two">
                   We provide fresh, healthy chapatis that bring the warmth of home-cooked food, ensuring comfort and nourishment in every meal.
                </p>
                <h4 class="about__add">
-                  Kritika Home Food PRIVATE LIMITED <br>
+                  Avni Home Food PRIVATE LIMITED <br>
                   Building No: 250, 3rd Cross Rd, Vidyamanya Nagar, Bengaluru, Karnataka 560091 <br>
                   Customer Care No: +91 6360170572
                </h4>
@@ -208,8 +208,8 @@
          <div class="products__container container grid">
             <article class="products__card">
                <img src="assets/img/popular1-removebg-preview.png" alt="Alloo Chapati Paratha" class="products__img">
-               <h3 class="products__name">Alloo Chapati <br> Paratha</h3>
-               <h4 class="products__price">Per 20 Rs</h4>
+               <h3 class="products__name">Alloo Chapati <br> Paratha </h3>
+               <h4 class="products__price">Per 20Rs</h4>
                <button class="products__button" aria-label="Contact for order">
                   <i class="ri-phone-fill"></i>
                </button>
@@ -280,6 +280,10 @@
                   <div>
                      <h3 class="contact__title">Delivery</h3>
                      <address class="contact__address">
+                        <p style="color: yellowgreen;">Door step </p>
+                        <p style="color: yellowgreen;">Pick form Factroy</p>
+
+                        
                         +91 6360170572 <br>
                         +91 6362753964
                      </address>
@@ -309,7 +313,7 @@
    <!--==================== FOOTER ====================-->
    <footer class="footer">
       <div class="footer__container container grid">
-         <a href="#" class="footer__logo">Kritika Home Food</a>
+         <a href="#" class="footer__logo">Avni Home Food</a>
          <div class="footer__content grid">
             <div>
                <h3 class="footer__title">Social</h3>
