--- a/index.html
+++ b/index.html
@@ -363,8 +363,8 @@
    <script src="assets/js/swiper-bundle.min.js"></script>
 
    <!--=============== MAIN JS ===============-->
-   <!-- <script src="dist/bundle.js"></script> -->
-   <script src="assets/js/main.js"></script>
+   <script src="dist/bundle.js"></script>
+   <!-- <script src="assets/js/main.js"></script> -->
 
 </body>
 
