Solving isssues regarding deployment

--- a/index.html
+++ b/index.html
@@ -360,7 +360,9 @@
    <script src="assets/js/scrollreveal.min.js"></script>
 
    <!--=============== SWIPER JS ===============-->
+   <!-- <script src="assets/js/scrollreveal.min.js"></script> -->
    <script src="assets/js/swiper-bundle.min.js"></script>
+
 
    <!--=============== MAIN JS ===============-->
    <script src="dist/bundle.js"></script>
