--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
    <a href="#" class="scrollup" id="scroll-up">
       <i class="ri-arrow-up-line"></i>
    </a>
-   
+
    <!--=============== SCROLLREVEAL ===============-->
    <script src="assets/js/scrollreveal.min.js"></script>
 
@@ -363,8 +363,9 @@
    <script src="assets/js/swiper-bundle.min.js"></script>
 
    <!--=============== MAIN JS ===============-->
-   <script src="dist/bundle.js"></script>
+   <script src="bundle.js"></script>
    <!-- <script src="assets/js/main.js"></script> -->
+
 
 </body>
 
