--- a/index.html
+++ b/index.html
@@ -357,10 +357,10 @@
    </a>
 
    <!--=============== SCROLLREVEAL ===============-->
-   <script src="assets/js/scrollreveal.min.js"></script>
+   <!-- <script src="assets/js/scrollreveal.min.js"></script> -->
 
    <!--=============== SWIPER JS ===============-->
-   <script src="assets/js/swiper-bundle.min.js"></script>
+   <!-- <script src="assets/js/swiper-bundle.min.js"></script> -->
 
    <!--=============== MAIN JS ===============-->
    <script src="bundle.js"></script>
