--- a/index.html
+++ b/index.html
@@ -79,14 +79,18 @@
             </div>
 
             <div class="home__images">
-               <img  src="assets/img/resized_image_1-removebg-preview.png" alt="Chapati Board" class="home__board">
-               <img  src="assets/img/roti.png" alt="Fresh Chapati" class="home__chapati">
-               <img  src="assets/img/recipe-cheese.png" alt="Cheese Ingredient" class="home__ingredient home__leaf-1">
-               <img  src="assets/img/recipe-flour.png" alt="Flour Ingredient" class="home__ingredient home__leaf-2">
-               <img  src="assets/img/salts-removebg-preview.png" alt="Salt Ingredient" class="home__ingredient home__pepperoni">
-               <img  src="assets/img/images-removebg-preview.png" alt="Mixed Ingredient" class="home__ingredient home__mushroom">
-               <img  src="assets/img/Ghee-removebg-preview.png" alt="Ghee Ingredient" class="home__ingredient home__olive">
-               <img  src="assets/img/images-removebg-preview.png" alt="Tomato Ingredient" class="home__ingredient home__tomato">
+               <img src="assets/img/resized_image_1-removebg-preview.png" alt="Chapati Board" class="home__board">
+               <img src="assets/img/roti.png" alt="Fresh Chapati" class="home__chapati">
+               <img src="assets/img/recipe-cheese.png" alt="Cheese Ingredient" class="home__ingredient home__leaf-1">
+               <img src="assets/img/recipe-flour.png" alt="Flour Ingredient" class="home__ingredient home__leaf-2">
+               <img src="assets/img/salts-removebg-preview.png" alt="Salt Ingredient"
+                  class="home__ingredient home__pepperoni">
+               <img src="assets/img/images-removebg-preview.png" alt="Mixed Ingredient"
+                  class="home__ingredient home__mushroom">
+               <img src="assets/img/Ghee-removebg-preview.png" alt="Ghee Ingredient"
+                  class="home__ingredient home__olive">
+               <img src="assets/img/images-removebg-preview.png" alt="Tomato Ingredient"
+                  class="home__ingredient home__tomato">
             </div>
          </div>
       </section>
@@ -99,11 +103,13 @@
                <h4>Our mission</h4>
                <br>
                <p class="about__description">
-                  At Avni Home Food, we ensure no one misses the warmth of home-cooked food. Our mission is to provide fresh, healthy chapatis that bring comfort and nourishment to every meal, wherever you are.
+                  At Avni Home Food, we ensure no one misses the warmth of home-cooked food. Our mission is to provide
+                  fresh, healthy chapatis that bring comfort and nourishment to every meal, wherever you are.
                </p>
                <h4 class="about__h4">Our value</h4>
                <p class="about__description two">
-                  We provide fresh, healthy chapatis that bring the warmth of home-cooked food, ensuring comfort and nourishment in every meal.
+                  We provide fresh, healthy chapatis that bring the warmth of home-cooked food, ensuring comfort and
+                  nourishment in every meal.
                </p>
                <h4 class="about__add">
                   Avni Home Food PRIVATE LIMITED <br>
@@ -127,21 +133,30 @@
                   Take a look at the most popular selling Chapati that our customers are loving right now.
                </p>
             </div>
-            <div class="popular__swiper swiper">
+
+            <div class="popular__swiper-container">
                <img src="assets/img/popular-dish.png" alt="Popular Dish" class="popular__dish">
-               <div class="swiper-wrapper">
-                  <article class="popular__card swiper-slide">
-                     <img src="assets/img/popular1-removebg-preview.png" alt="Ghee Chapati" class="popular__img">
-                     <h3 class="popular__title">Ghee Chapati</h3>
-                  </article>
-                  <article class="popular__card swiper-slide">
-                     <img src="assets/img/popular1-removebg-preview.png" alt="Yucard Chapati" class="popular__img">
-                     <h3 class="popular__title">Yucard Chapati</h3>
-                  </article>
-                  <article class="popular__card swiper-slide">
-                     <img src="assets/img/popular1-removebg-preview.png" alt="Alloo Paratha" class="popular__img">
-                     <h3 class="popular__title">Alloo Paratha</h3>
-                  </article>
+
+               <!-- Swiper -->
+               <div class="popular__swiper swiper">
+                  <div class="swiper-wrapper">
+                     <article class="popular__card swiper-slide">
+                        <img src="assets/img/popular1-removebg-preview.png" alt="Ghee Chapati" class="popular__img">
+                        <h3 class="popular__title">Ghee Chapati</h3>
+                     </article>
+                     <article class="popular__card swiper-slide">
+                        <img src="assets/img/popular1-removebg-preview.png" alt="Yucard Chapati" class="popular__img">
+                        <h3 class="popular__title">Yucard Chapati</h3>
+                     </article>
+                     <article class="popular__card swiper-slide">
+                        <img src="assets/img/popular1-removebg-preview.png" alt="Alloo Paratha" class="popular__img">
+                        <h3 class="popular__title">Alloo Paratha</h3>
+                     </article>
+                  </div>
+
+                  <!-- Navigation buttons -->
+                  <div class="swiper-button-next"></div>
+                  <div class="swiper-button-prev"></div>
                </div>
             </div>
          </div>
@@ -198,7 +213,8 @@
                   </div>
                </div>
             </div>
-            <img src="assets/img/istockphoto-1197134869-612x612-removebg-preview.png" alt="Fresh Ingredients" class="recipe__img">
+            <img src="assets/img/istockphoto-1197134869-612x612-removebg-preview.png" alt="Fresh Ingredients"
+               class="recipe__img">
          </div>
       </section>
 
@@ -283,7 +299,7 @@
                         <p style="color: yellowgreen;">Door step </p>
                         <p style="color: yellowgreen;">Pick form Factroy</p>
 
-                        
+
                         +91 6360170572 <br>
                         +91 6362753964
                      </address>
@@ -303,8 +319,8 @@
             <div class="contact__image">
                <img src="assets/img/delvery.png" alt="Delivery Image" class="contact__img">
             </div>
-            <img  src="assets/img/sticker-tomato.svg" alt="Tomato Sticker" class="contact__sticker-1">
-            <img  src="assets/img/sticker-mushroom.svg" alt="Mushroom Sticker" class="contact__sticker-2">
+            <img src="assets/img/sticker-tomato.svg" alt="Tomato Sticker" class="contact__sticker-1">
+            <img src="assets/img/sticker-mushroom.svg" alt="Mushroom Sticker" class="contact__sticker-2">
             <img src="assets/img/sticker-onion.svg" alt="Onion Sticker" class="contact__sticker-3">
          </div>
       </section>
@@ -332,10 +348,10 @@
             <div>
                <h3 class="footer__title">Payment Methods</h3>
                <div class="footer__pay">
-                  <img  src="assets/img/footer-card-1.png" alt="Payment Card 1" class="footer__pay-img">
-                  <img  src="assets/img/footer-card-2.png" alt="Payment Card 2" class="footer__pay-img">
-                  <img  src="assets/img/footer-card-3.png" alt="Payment Card 3" class="footer__pay-img">
-                  <img  src="assets/img/footer-card-4.png" alt="Payment Card 4" class="footer__pay-img">
+                  <img src="assets/img/footer-card-1.png" alt="Payment Card 1" class="footer__pay-img">
+                  <img src="assets/img/footer-card-2.png" alt="Payment Card 2" class="footer__pay-img">
+                  <img src="assets/img/footer-card-3.png" alt="Payment Card 3" class="footer__pay-img">
+                  <img src="assets/img/footer-card-4.png" alt="Payment Card 4" class="footer__pay-img">
                </div>
             </div>
             <div>
