--- a/index.html
+++ b/index.html
@@ -123,41 +123,38 @@
             <img src="assets/img/aboutImage.png" alt="About Image" class="about__img">
          </div>
       </section>
-
+      
       <!--==================== POPULAR ====================-->
       <section class="popular section" id="popular">
          <div class="popular__container container grid">
             <div class="popular__data">
                <h2 class="section__title">Discover <br> Top Selling Chapati</h2>
+
                <p class="popular__description">
-                  Take a look at the most popular selling Chapati that our customers are loving right now.
+                  Take a look at the most popular selling Chapati that our customers are loving right now. 
                </p>
             </div>
 
-            <div class="popular__swiper-container">
-               <img src="assets/img/popular-dish.png" alt="Popular Dish" class="popular__dish">
+            <div class="popular__swiper swiper">
+               <img src="assets/img/popular-dish.png" alt="image" class="popular__dish">
 
-               <!-- Swiper -->
-               <div class="popular__swiper swiper">
-                  <div class="swiper-wrapper">
-                     <article class="popular__card swiper-slide">
-                        <img src="assets/img/popular1-removebg-preview.png" alt="Ghee Chapati" class="popular__img">
-                        <h3 class="popular__title">Ghee Chapati</h3>
-                     </article>
-                     <article class="popular__card swiper-slide">
-                        <img src="assets/img/popular1-removebg-preview.png" alt="Yucard Chapati" class="popular__img">
-                        <h3 class="popular__title">Yucard Chapati</h3>
-                     </article>
-                     <article class="popular__card swiper-slide">
-                        <img src="assets/img/popular1-removebg-preview.png" alt="Alloo Paratha" class="popular__img">
-                        <h3 class="popular__title">Alloo Paratha</h3>
-                     </article>
-                  </div>
+               <div class="swiper-wrapper">
+                  <artical class="popular__card swiper-slide">
+                     <img src="assets/img/popular1-removebg-preview.png" alt="image" class="popular__img">
+                     <h3 class="popular__title">Ghee Chapati</h3>
+                  </artical>
 
-                  <!-- Navigation buttons -->
-                  <div class="swiper-button-next"></div>
-                  <div class="swiper-button-prev"></div>
+                  <artical class="popular__card swiper-slide">
+                     <img src="assets/img/popular1-removebg-preview.png" alt="image" class="popular__img">
+                     <h3 class="popular__title">Yucard Chapati</h3>
+                  </artical>
+
+                  <artical class="popular__card swiper-slide">
+                     <img src="assets/img/popular1-removebg-preview.png" alt="image" class="popular__img">
+                     <h3 class="popular__title">Alloo Paratha</h3>
+                  </artical>
                </div>
+
             </div>
          </div>
       </section>
