--- a/index.html
+++ b/index.html
@@ -147,45 +147,38 @@
 
          </div>
       </section>
-      
+
       <!--==================== POPULAR ====================-->
       <section class="popular section" id="popular">
          <div class="popular__container container grid">
             <div class="popular__data">
                <h2 class="section__title">Discover <br> Top Selling Chapati</h2>
+
                <p class="popular__description">
                   Take a look at the most popular selling Chapati that our customers are loving right now.
                </p>
             </div>
 
             <div class="popular__swiper swiper">
-               <img src="assets/img/popular-dish.png" alt="background dish" class="popular__dish">
+               <img src="assets/img/popular-dish.png" alt="image" class="popular__dish">
 
                <div class="swiper-wrapper">
-                  <article class="popular__card swiper-slide">
-                     <div class="popular__img-wrapper">
-                        <img src="assets/img/popular1-removebg-preview.png" alt="Ghee Chapati" class="popular__img">
-                     </div>
+                  <artical class="popular__card swiper-slide">
+                     <img src="assets/img/popular1-removebg-preview.png" alt="image" class="popular__img">
                      <h3 class="popular__title">Ghee Chapati</h3>
-                  </article>
+                  </artical>
 
-                  <article class="popular__card swiper-slide">
-                     <div class="popular__img-wrapper">
-                        <img src="assets/img/popular1-removebg-preview.png" alt="Yucard Chapati" class="popular__img">
-                     </div>
+                  <artical class="popular__card swiper-slide">
+                     <img src="assets/img/popular1-removebg-preview.png" alt="image" class="popular__img">
                      <h3 class="popular__title">Yucard Chapati</h3>
-                  </article>
+                  </artical>
 
-                  <article class="popular__card swiper-slide">
-                     <div class="popular__img-wrapper">
-                        <img src="assets/img/popular1-removebg-preview.png" alt="Alloo Paratha" class="popular__img">
-                     </div>
+                  <artical class="popular__card swiper-slide">
+                     <img src="assets/img/popular1-removebg-preview.png" alt="image" class="popular__img">
                      <h3 class="popular__title">Alloo Paratha</h3>
-                  </article>
+                  </artical>
                </div>
 
-               <!-- Add pagination -->
-               <div class="swiper-pagination"></div>
             </div>
          </div>
       </section>
