--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
          </section>
    
          <!--==================== POPULAR ====================-->
-         <section class="popular section" id="popular">
+         <!-- <section class="popular section" id="popular">
             <div class="popular__container container grid">
                <div class="popular__data">
                   <h2 class="section__title">Discover <br> Top Selling Chapati</h2>
@@ -182,7 +182,7 @@
    
                </div>
             </div>
-         </section>
+         </section> -->
    
          <!--==================== RECIPE ====================-->
          <section class="recipe section">
