--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                </li>
 
                <li>
-                  <a href="#popular" class="nav__link">Popular Chapati</a>
+                  <a href="#recipe" class="nav__link">Fresh Ingredients</a>
                </li>
 
                <li>
