Fixing links issues

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <nav class="nav container">
          <a href="#" class="nav__logo">
             <img src="assets/img/logo.png" alt="image" style="width: 35px;">
-            Kritika Home Food
+            Avni Home Food
          </a>
 
          <div class="nav__menu" id="nav-menu">
@@ -129,7 +129,7 @@
    
                   
    
-                  <h4 class="about__add">Kritika Home Food PRIVATE LIMITED <br>
+                  <h4 class="about__add">Avni Home Food PRIVATE LIMITED <br>
                      Building No: 250, 3rd Cross Rd, Vidyamanya Nagar, Bengaluru, Karnataka 560091 <br>
                      Cusomer Care No: +91 6360170572
                   </h4>
@@ -185,7 +185,7 @@
          </section> -->
    
          <!--==================== RECIPE ====================-->
-         <section class="recipe section">
+         <section class="recipe section" id="recipe">
             <h2 class="section__title recipe__title"> Fresh And <br> Natural Ingredients</h2>
    
             <div class="recipe__container container grid">
@@ -433,7 +433,7 @@
       </div>
 
       <span class="footer__copy">
-         &#169; Kritika Home Food All Rights Reserved
+         &#169; Avni Home Food All Rights Reserved
       </span>
 
    </footer>
